Custom scrollbar and DB more powerful account, fix naming.

--- a/src/main/webapp/static/css/shipyard.css
+++ b/src/main/webapp/static/css/shipyard.css
@@ -48,7 +48,7 @@ img{
 }
 
 .shipContainer {
-    position: absolute;
+    position: relative;
     margin-top: 3%;
     margin-left: 10%;
     overflow: auto;
